latd (1.12-1) unstable; urgency=low

  * llogin -r is an alias for llogin -R (easier to type!)
  * New moprc program for remote administration of terminal servers
  * llogin can now connect to passworded services using llogin -w
  * Split out Linux-specific code into its own clas

 --

latd (1.11-1) unstable; urgency=low

  * Added -l switch to llogin to replace LF with VT
  * Document -d -v switch to llogin
  * Renamed PortSession to QueuedSession so it's less confusing
  * /dev/lat ports connect using LocalPort and localportSession so they
    can share connections.
  * Fixed spurious newlines generated by llogin -p

 -- Patrick Caulfield <patrick@debian.org>  Wed, 26 Sep 2001 14:37:43 +0100

latd (1.10-1) unstable; urgency=low

  * Can now handle multiple reverse-LAT connections via the same connection 
    (llogin only)
  * Can specify a command to run (and user to run it under) for a named service.

 -- Patrick Caulfield <patrick@debian.org>  Thu, 16 Aug 2001 11:54:28 +0100

latd (1.03-1) unstable; urgency=low

  * Use std:: namespace so it compiles with GCC 3.0
  * Don't use makedepend for dependancy management.
  * Don't depend on libstdc++2.10-dev. 
    Closes: bug#104954
  * Fix includes in server.cc that depend for GLIBC version

 -- Patrick Caulfield <patrick@debian.org>  Sun, 15 Jul 2001 19:44:36 +0100

latd (1.02-1) unstable; urgency=low

  * Fixed bug where you *had* to specify a node name in reverse connections
  * New llogin program
  * This file is now a Debian changelog
  * Fix keepalives when connected to Tru64
  * Tidied MAC address internals
  * In fact, quite a lot of internal tidying and bug-fixing.
  * Move sockets into /var/run as per FHS
  * Fixed EOF trapping on local ports
  * Fixed latcp -d display of local ports (node & service were swapped)
  * Changed example latd.conf to show we can connect to services without 
    specifying a node name now
  * Closes: bug#85288
